# cgol

./: COPYRIGHT  Cargo.toml  README.md  search-index.js  settings.html  source-files.js
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
benches/: bench.rs
cgol/: all.html  enum.Cell.html  index.html  sidebar-items.js  struct.Game.html
cgol/cell/: enum.Cell.html
cgol/game/: index.html  sidebar-items.js  struct.Game.html  type.Col.html  type.ColMut.html  type.Row.html  type.RowMut.html
cgol/game/iter/: type.Col.html  type.ColMut.html  type.Row.html  type.RowMut.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.AsMut.js  trait.AsRef.js  trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/arith/: trait.Add.js  trait.AddAssign.js  trait.Div.js  trait.DivAssign.js  trait.Mul.js  trait.MulAssign.js  trait.Rem.js  trait.RemAssign.js  trait.Sub.js  trait.SubAssign.js
implementors/core/ops/bit/: trait.BitAnd.js  (+10 more)
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: lib.rs
src/cell/: macros.rs  mod.rs
src/cgol/: lib.rs.html
src/cgol/cell/: macros.rs.html  mod.rs.html
src/cgol/game/: iter.rs.html  mod.rs.html  panic.rs.html
src/game/: iter.rs  mod.rs  panic.rs
utils/: redirect.html
(+2 files in other folders)
